# agent-smith

./: .env.sample  .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  ENHANCEMENT_PLAN.md  INDEX.md  INSTALL.md  README.md  TASK-6-COMPLETION-REPORT.md  build-skill.sh  hooks.json  lefthook.yml  marketplace.json  plugin.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_sdk_integration.py
.claude-plugin/: hooks.json  marketplace.json  plugin.json
.claude-plugin/commands/: analyze.md  health.md  install.md  report.md  scenario.md  tax.md
.claude/commands/: INDEX.md  agent-smith-analyze.md  agent-smith-categorize.md  agent-smith-health.md  agent-smith-onboard.md  agent-smith-optimize.md  agent-smith-report.md  agent-smith-scenario.md  agent-smith-tax.md  agent-smith.md  categorize.md  optimize.md  ship.md
.github/workflows/: main-ci-cd.yml  pr-validation.yml
agent-smith-plugin/.claude-plugin/: plugin.json
agent-smith-plugin/commands/: INDEX.md  analyze.md  categorize.md  health.md  insights.md  install.md  optimize.md  report.md  review-conflicts.md  scenario.md  schedule.md  tax.md
agent-smith-plugin/hooks/: hooks.json  session_start.py
ai_docs/: INDEX.md  cc-plugins-overview.md  pocketsmith-api-budgeting.md  pocketsmith-api-documentation.md  pocketsmith-api-errors.md  pocketsmith-api-oauth.md  pocketsmith-api-openapi.json  pocketsmith-api-pagination.md  pocketsmith-api-quick-reference.md
backups/: INDEX.md
commands/: analyze.md  install.md  report.md  scenario.md
data/: INDEX.md
data/health/: INDEX.md
data/tax/: INDEX.md
data/templates/: INDEX.md  advanced.yaml  separated-families.yaml  shared-household.yaml  simple.yaml
docs/: INDEX.md
docs/analyses/: repo-cleanup-plan.md
docs/architecture/: llm-integration.md
docs/design/: 2025-11-20-agent-smith-design.md  LESSONS_LEARNED.md
docs/examples/: README.md  advanced-patterns.yaml  basic-rules.yaml  household-workflow.yaml  rule-learning-example.md  tax-deductible.yaml
docs/guides/: backup-and-restore-guide.md  health-check-guide.md  onboarding-guide.md  platform-to-local-migration.md  skill-installation.md  unified-rules-guide.md
docs/implementation/: llm-categorization-implementation-summary.md  task-6-completion-report.md  task-6-integration-summary.md
docs/operations/: 2025-11-20_phase1_testing.md  2025-11-20_phase2_completion.md  2025-11-20_phase3_completion.md  2025-11-20_phase4_completion.md  2025-11-21_phase5_completion.md  2025-11-21_phase6_completion.md  2025-11-21_phase7_completion.md
logs/: INDEX.md
reports/: INDEX.md
scripts/: INDEX.md  __init__.py  check_conflicts.py  dev-sync.sh  find_category.py  test_visualizer.py
scripts/analysis/: __init__.py  (+2 more)
tests/: __init__.py  utils.py
(+204 files in other folders)
